# steel

./: .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  COMPATIBILITY_GUIDE.md  COMPATIBILITY_SUMMARY.md  CONTRIBUTING.md  COPYRIGHT  CROSS_PLATFORM_COMPATIBILITY.md  Cargo.toml  Muffinconfig.mff  Muffinconfig_exemple.muf  NOTICE  README  README.md  Steel  VITTELIB_INTEGRATION.md  fichier.muf  make_pkg.sh  muffin  muffin-0.1.0.pkg  muffin.toml  netlify.toml  syntax.md
.github/workflows/: steecleditor.yml
MuffinLib/: Cargo.toml  README
MuffinLib/lib/: Cargo.toml
MuffinLib/lib/src/: error.rs  lib.rs  prelude.rs  version.rs
MuffinLib/lib/src/capsule/: mod.rs  policy.rs
MuffinLib/lib/src/cpython/: Cargo.toml
MuffinLib/lib/src/cpython/src/: args.rs  detect.rs  driver.rs  in_tree.rs  lib.rs  spec.rs  test.rs
MuffinLib/lib/src/diag/: Cargo.toml
MuffinLib/lib/src/diag/src/: codes.rs
MuffinLib/lib/src/gcc/: Cargo.toml
MuffinLib/lib/src/gcc/src/: args.rs  driver.rs  in_tree.rs  lib.rs  mod.rs  spec.rs  tests.rs
MuffinLib/lib/src/graph/: Cargo.toml
MuffinLib/lib/src/graph/src/: Cargo.toml  bake.rs  dot.rs  json.rs  mod.rs  types.rs
MuffinLib/lib/src/mff/: Cargo.toml
MuffinLib/lib/src/mff/src/: index.rs  mod.rs  reader.rs  schema.rs  writer.rs
MuffinLib/lib/src/model/: artifact.rs  graph.rs  target.rs
MuffinLib/lib/src/muffin/: Cargo.toml
MuffinLib/lib/src/muffin/src/: ast.rs  decompile.rs  diag.rs  driver.rs  emit.rs  hir.rs  ir.rs  lexer.rs  lib.rs  lower.rs  main.rs  mod.rs  parser.rs  resolve.rs  schema.rs  serializer.rs  source.rs  span.rs  token.rs  typecheck.rs  validator.rs
MuffinLib/lib/src/ocaml/: Cargo.toml
MuffinLib/lib/src/ocaml/src/: args.rs  detect.rs  driver.rs  in_tree.rs  lib.rs  spec.rs  test.rs
MuffinLib/lib/src/output/: Cargo.toml  graph_json.rs  mod.rs  mub.rs
MuffinLib/lib/src/path/: Cargo.toml
MuffinLib/lib/src/path/src/: canon.rs  glob.rs  mod.rs  normal.rs
MuffinLib/lib/src/platform/: Cargo.toml
MuffinLib/lib/src/platform/src/: bsd.rs  linux.rs  macos.rs  solaris.rs  windows.rs
MuffinLib/lib/src/resolve/: Cargo.toml  expand.rs  implicit.rs  mod.rs  variable.rs
MuffinLib/lib/src/runner/: cache.rs  mod.rs  process.rs  sandbox.rs
MuffinLib/lib/src/span/: Cargo.toml
MuffinLib/lib/src/span/src/: mod.rs  span.rs
MuffinLib/lib/src/store/: Cargo.toml
MuffinLib/lib/src/store/src/: cas.rs  gc.rs  index.rs  mod.rs
MuffinLib/lib/src/tool/: Cargo.toml
MuffinLib/lib/src/tool/src/: lib.rs  mod.rs  mod_.rs  probe.rs  runner.rs
SteelLib/lib/: Cargo.toml
SteelLib/lib/src/: error.rs  lib.rs  prelude.rs  version.rs
SteelLib/lib/src/capsule/: mod.rs  policy.rs  sandbox.rs
SteelLib/lib/src/cpython/: Cargo.toml
SteelLib/lib/src/cpython/src/: args.rs  detect.rs  driver.rs  in_tree.rs  lib.rs  spec.rs  test.rs
SteelLib/lib/src/diag/: Cargo.toml
SteelLib/lib/src/diag/src/: codes.rs  diag.rs  render.rs  sink.rs
SteelLib/lib/src/gcc/: Cargo.toml
SteelLib/lib/src/gcc/src/: args.rs  detect.rs  in_tree.rs  lib.rs  spec.rs  tests.rs
SteelLib/lib/src/graph/: Cargo.toml
SteelLib/lib/src/graph/src/: Cargo.toml  bake.rs  dot.rs  json.rs  mod.rs  plan.rs  topo.rs  types.rs  wire.rs
SteelLib/lib/src/model/: artifact.rs  graph.rs  target.rs
SteelLib/lib/src/ocaml/: Cargo.toml
SteelLib/lib/src/ocaml/src/: args.rs  detect.rs  driver.rs  in_tree.rs  lib.rs  spec.rs  test.rs
SteelLib/lib/src/output/: graph_json.rs  mod.rs  mub.rs
SteelLib/lib/src/path/: Cargo.toml
SteelLib/lib/src/path/src/: canon.rs  glob.rs  mod.rs  normal.rs
SteelLib/lib/src/platform/: Cargo.toml
SteelLib/lib/src/platform/src/: bsd.rs  linux.rs  macos.rs  mod.rs  solaris.rs  windows.rs
SteelLib/lib/src/resolve/: Cargo.toml  expand.rs  implicit.rs  mod.rs  variable.rs
SteelLib/lib/src/runner/: cache.rs  mod.rs  process.rs  sandbox.rs
SteelLib/lib/src/span/: Cargo.toml
SteelLib/lib/src/span/src/: file.rs  mod.rs  pos.rs  span.rs
SteelLib/lib/src/steel/: Cargo.toml
SteelLib/lib/src/steel/src/: ast.rs  codegen.rs  decompile.rs  diag.rs  driver.rs  emit.rs  hir.rs  ir.rs  lib.rs  lower.rs  main.rs  mod.rs  parser.rs  resolve.rs  schema.rs  serializer.rs  source.rs  span.rs  token.rs  typecheck.rs  validator.rs
SteelLib/lib/src/store/src/: cas.rs  gc.rs  index.rs
SteelLib/lib/src/tool/: Cargo.toml
SteelLib/lib/src/tool/src/: lib.rs  mod.rs  mod_.rs  tool.rs
buildMuffin/: muffin
doc/: manifest.md  muffin.1  muffin.am  toolchain_detection.md
docs/: CNAME  README.md  cookbook.md  editor-setup.md  faq-erreurs.md  lexique-muf4.md  migration.md  observabilite.md  quickstart.md  sitemap.xml  troubleshooting.md
docs/angular/: NETLIFY_DB.md  README.md  package.json
docs/api/: index.md
docs/components/: callout.html  cards.html  table.html
docs/data/: nav.yml  search-index.schema.json  versions.yml
docs/examples/: index.md
docs/how-to/: index.md
docs/internals/: index.md
docs/layouts/: api.html  blog.html  changelog.html  doc.html  error.html  index.html
docs/legal/: index.md  license.md  privacy.md  third-party-notices.md  trademarks.md
docs/man/: index.md  muffin-build.1.md  muffin.1.md
docs/manual/: 00-introduction.md  01-concepts.md  99-appendix.md
docs/meta/: generation.md  (+6 more)
schemas/: README.md  muffin.decompile.report.schema.json  muffin.fingerprints.json.schema.json  muffin.graph.json.schema.json
scripts/: compile.sh  postinstall  print-site-quick-jobs.sh  qa-site-local.sh  update-snippet-snapshot.sh  verify-editorconfig.sh  verify-site-sync.sh
src/: MODULE_ORGANIZATION.md  arscan.rs  arscan.vit  build_muf.rs  build_muf.vit  builder.rs  commands.rs  commands.vit  compiler.rs  config.rs  config.vit  debug.rs  debug.vit  def_target_file.rs  def_target_file.vit  default.rs  default.vit  dependancies.rs  dependancies.vit  directory.rs  directory.vit  editor_setup.rs  error.rs  expand.rs  expand.vit  externs.rs  generator.rs  gettext.rs  hash.rs  implicit.rs  implicit.vit  interface.rs  interface.vit  job.rs  lib.rs  load.rs  load.vit  loadapi.rs  loadapi.vit  main.rs  (+33 more)
tests/: os_compatibility.rs
(+215 files in other folders)
