[package]
name = "muffin"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"
authors = ["Vitte Team"]
description = "Muffin: Declarative configuration layer for Vitte build system"
repository = "https://github.com/vitte-lang/muffin"
license = "See COPYING"
readme = "README.md"

[workspace]
members = [".", "vitteLib"]
resolver = "2"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File handling
walkdir = "2.4"
tempfile = "3.8"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# VitteLib (utility library)
vittelib = { path = "vitteLib" }

# Utilities
regex = "1.10"
once_cell = "1.19"
parking_lot = { version = "0.12", optional = true }
indexmap = "2.1"
libc = "0.2"
num_cpus = "1.16"

# Platform-specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "fileapi"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2", optional = true }

[features]
default = []
legacy = []                             # Windows XP/Vista, macOS 10.9, CentOS 6 support
modern = ["parking_lot", "nix", "winapi"]  # Optimized for modern OS
full = ["modern", "advanced-logging"]
advanced-logging = []
testing = []

[dev-dependencies]
criterion = "0.5"
insta = "1.34"

[lib]
name = "muffin"
path = "src/lib.rs"

[[bin]]
name = "muffin"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
