[package]
name = "flan-cpython"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["vitte-lang"]
description = "Flan CPython backend (bytecode, extensions, bundles, Nuitka)"
repository = "https://github.com/vitte-lang/flan"

[lib]
name = "flan_cpython"
path = "src/lib.rs"

[dependencies]
# Core Flan
flanlib = { path = "../..", package = "FlanLib" }

# Erreurs structurées
thiserror = "1.0"

# Optionnel : sérialisation future (spec / artifacts)
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
serde = ["dep:serde"]
