# C:\Users\gogin\Documents\GitHub\flan\FlanLib\lib\src\gcc\Cargo.toml

[package]
name = "flan_gcc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GCC toolchain integration for Flan (detection + spec + driver + args)."
repository = "https://github.com/flan-build/flan"
readme = "README.md"

[lib]
name = "flan_gcc"
path = "src/lib.rs"

[features]
default = []
# Enable if you want verbose tracing hooks inside the gcc module (optional).
trace = []

[dependencies]
# Internal Flan crate layout (adjust names/paths if your workspace differs)
FlanLib = { path = "../.." }

# Common utilities
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Filesystem + process helpers
which = "6"

# Optional: richer error context in logs / diagnostics
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"

[package.metadata]
# Keep empty for now; reserved for Flan tooling.
flan = { module = "gcc" }
