[package]
name = "flan-ocaml"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["vitte-lang"]
description = "Flan backend for OCaml (ocamlc / ocamlopt)"
repository = "https://github.com/vitte-lang/flan"

[lib]
name = "flan_ocaml"
path = "src/lib.rs"

[dependencies]
# Core Flan
flanlib = { path = "../..", package = "FlanLib" }

# Erreurs structurées
thiserror = "1.0"

# Sérialisation optionnelle (spec / artefacts)
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
serde = ["dep:serde"]
