[package]
name = "flan_path"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Path normalization and glob helpers for Flan (std-only)."
repository = "https://github.com/gogin/flan"
keywords = ["flan", "path", "glob", "normalize"]
categories = ["development-tools"]

[lib]
name = "flan_path"
path = "src/mod.rs"

[features]
default = ["std-only"]
std-only = []

[dependencies]
# std-only

[dev-dependencies]
# std-only
