[package]
name = "muffin_platform"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Platform detection and OS-specific path/process helpers for Muffin (std-only)."
repository = "https://github.com/gogin/muffin"
keywords = ["muffin", "platform", "os", "paths", "toolchain"]
categories = ["development-tools", "os"]

[lib]
name = "muffin_platform"
path = "src/mod.rs"

[features]
default = ["std-only"]

# Marker feature to indicate the crate intentionally uses std-only probing.
std-only = []

# Future extension points (keep empty; implement later if needed):
with-libc = []
with-windows-knownfolders = []
with-sysctl = []

[dependencies]
# std-only: no external deps

[dev-dependencies]
# std-only tests; no external deps
