
[package]
name = "muffin_span"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Span/File primitives and source mapping for Muffin diagnostics (std-only)."
repository = "https://github.com/gogin/muffin"
keywords = ["muffin", "span", "diagnostics", "lexer", "parser"]
categories = ["development-tools"]

[lib]
name = "muffin_span"
path = "src/lib.rs"

[features]
default = ["std-only"]
std-only = []

[dependencies]
# std-only

[dev-dependencies]
# std-only
