[package]
name = "steel-ocaml"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["vitte-lang"]
description = "Steel backend for OCaml (ocamlc / ocamlopt)"
repository = "https://github.com/vitte-lang/steel"

[lib]
name = "steel_ocaml"
path = "src/lib.rs"

[dependencies]
# Core Steel
steellib = { path = "../..", package = "SteelLib" }

# Erreurs structurées
thiserror = "1.0"

# Sérialisation optionnelle (spec / artefacts)
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
serde = ["dep:serde"]
