
[package]
name = "steel_span"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Span/File primitives and source mapping for Steel diagnostics (std-only)."
repository = "https://github.com/gogin/steel"
keywords = ["steel", "span", "diagnostics", "lexer", "parser"]
categories = ["development-tools"]

[lib]
name = "steel_span"
path = "src/mod.rs"

[features]
default = ["std-only"]
std-only = []

[dependencies]
# std-only

[dev-dependencies]
# std-only
